--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="QRCoder" Version="1.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Repository\Repository.csproj" />
+  </ItemGroup>
+
 </Project>
